--- a/templates/resul.html
+++ b/templates/resul.html
@@ -8,13 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-
-    <title>나의 운동일지</title>
     <style>
-                * {
-            font-family: 'Poor Story', cursive;
+     * {
+     font-family: 'Poor Story', cursive;
 
 
         }
@@ -109,7 +109,7 @@
                         let temp_html= ``
                         if (goal_num * goal_set <= result_num * result_set) {
                             test1= test1+1
-                            temp_html = `<div class = "card">
+                            temp_html = `<tr class = "card">
                                             <li class="win">
                                                 <h3>${title}</h3>
                                                 <h3>${goal_num}</h3>
@@ -118,7 +118,7 @@
                                                 <h3 style = "color:orange;">${result_set}</h3>
                                                 <button type="button" class="btn btn-outline-primary">성취</button>
                                             </li>
-                                         </div>`
+                                         </tr>`
                             //버튼 말고 클래스 지정해서 둥글게 깎고 색을 넣어줘야할까
                         } else {
                             test2= test2+1
@@ -134,7 +134,6 @@
                                          </div>`
                         }
                         $('#box').append(temp_html)
-                        console.log('성공')
                     }
                     // 로딩 다 되고서 나오게할수없나..
                     $('#good_box').append(test1)
@@ -149,27 +148,67 @@
         }
     </script>
 <body>
-    <div class="mypic">
-        <h1>나의 운동일지</h1>
+
+
+<div class="container">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+
+        <a href="#"
+           class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+
+            홈으로
+            <!--            <img src="https://img.icons8.com/ios-filled/512/flex-biceps.png"width="30" height="30">-->
+        </a>
+
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="#" class="nav-link px-2 link-dark">운동 목표 설정</a></li>
+            <li><a href="/templates/action.html" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">성적표</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">구씨네</a></li>
+        </ul>
+
+        <div class="col-md-3 text-end">
+            <button type="button" class="btn">Login</button>
+            <button type="button" class="btn">Sign-up</button>
+        </div>
+    </header>
+</div>
+<div class="mypic">
+    <h1>운동 성적표</h1>
+</div>
+<hr>
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">운동 종류</th>
+        <th scope="col">목표 횟수</th>
+        <th scope="col">목표 세트수</th>
+        <th scope="col">실제 횟수</th>
+        <th scope="col">실제 세트수</th>
+    </tr>
+    </thead>
+    <tbody id="body">
+    </tbody>
+</table>
+
+<div class="card-box" id="box">
+</div>
+
+<div class="score_box">
+    <div class ="good" id="good_box">
     </div>
 
-    <div class="card-box" id="box">
+    <div class ="score" id="good_score">
+        <p>성공</p>
     </div>
 
-    <div class="score_box">
-        <div class ="good" id="good_box">
-        </div>
-
-        <div class ="score" id="good_score">
-            <p>성공</p>
-        </div>
-
-        <div class ="bad" id="bad_box">
-        </div>
-
-        <div class ="score" id="bad_score">
-            <p>실패</p>
-        </div>
+    <div class ="bad" id="bad_box">
     </div>
+
+    <div class ="score" id="bad_score">
+        <p>실패</p>
+    </div>
+</div>
 
 </body>
