--- a/templates/resul.html
+++ b/templates/resul.html
@@ -50,6 +50,15 @@
             margin-top: 46.625px;
         }
 
+        .fail {
+            color: red;
+        }
+        .count {
+            width:230px;
+            margin: 30px auto;
+
+            font-size: 30px;
+        }
 
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -75,6 +84,9 @@
                 url: '/api/result',
                 data: {},
                 success: function (response) {
+                    let test1 = 0
+                    let test2 = 0
+
                     let rows = response['result']
                     for (let i = 0; i < rows.length; i++) {
                         let title = rows[i]['title']
@@ -83,16 +95,37 @@
                         let resultNum = rows[i]['result_num']
                         let resultSet = rows[i]['result_set']
 
-                        let temp_html = `<tr>
+                        let temp_html = ``
+                        if (goalNum * goalSet <= resultNum * resultSet) {
+                            test1 += 1
+                            temp_html = `<tr>
                                             <td>${title}</td>
                                             <td>${goalNum}</td>
                                             <td>${goalSet}</td>
                                             <td>${resultNum}</td>
                                             <td>${resultSet}</td>
+                                            <td><p>성취</p></td>
                                         </tr>`
+                        } else {
+                            test2 += 1
+                            temp_html = `<tr>
+                                            <td>${title}</td>
+                                            <td>${goalNum}</td>
+                                            <td>${goalSet}</td>
+                                            <td>${resultNum}</td>
+                                            <td>${resultSet}</td>
+                                            <td><p class="fail">실패</p></td>
+                                        </tr>`
+                        }
                         $('#body').prepend(temp_html)
-                    }
 
+
+                    }
+                    let temp_html2 = `
+                                        <p className="count_success">성공: ${test1} &nbsp&nbsp&nbsp&nbsp
+                                        <span class="fail">실패: ${test2}</span></p>
+                                    `
+                    $('#count').append(temp_html2)
 
                 }
             })
@@ -141,11 +174,15 @@
         <th scope="col">실제 세트수</th>
     </tr>
     </thead>
+    <!--  성공 실패 유뮤 보여 주는 곳  -->
     <tbody id="body">
-
 
     </tbody>
 </table>
+
+<div class="count" id="count">
+
+</div>
 
 
 </body>
