--- a/templates/main.html
+++ b/templates/main.html
@@ -36,6 +36,12 @@
 
         }
 
+        .form-floating {
+
+            height: 10px;
+
+        }
+
         .input div {
             margin: 0px 3rem 4rem;
 
@@ -45,23 +51,102 @@
         .container {
             font-weight: bold;
         }
-        .input > div >button{
+
+        .input > div > button {
             margin-top: 46.625px;
+        }
+
+        #xbox {
+            margin-left: 10px;
         }
 
 
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.3.min.js"
-        integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready(function () {
+            show_goal();
+        });
+
+        function show_goal() {
+            $.ajax({
+                type: "GET",
+                url: "/goal",
+                data: {},
+                success: function (response) {
+
+                    let rows = response['goals']
+                    for (let i = 0; i < rows.length; i++) {
+                        let num = rows[i]['num']
+                        let day = rows[i]['day']
+                        let title = rows[i]['title']
+                        let goal_num = rows[i]['goal_num']
+                        let goal_set = rows[i]['goal_set']
+
+
+                        let temp_html = ` <tr>
+                                                <td>${day}</td>
+                                                <td>${title}</td>
+                                                <td>${goal_num}</td>
+                                                <td>${goal_set} <button onclick="delete_goal(${num})" id="xbox" type="button">X</button></td>
+
+                                            </tr>`
+                        //
+                        $('#body').append(temp_html)
+                    }
+                }
+            });
+        }
+
+        function save_goal() {
+            let day = $('#day').val()
+            let title = $('#title').val()
+            let goal_num = $('#goal_num').val()
+            let goal_set = $('#goal_set').val()
+
+
+            $.ajax({
+                type: "POST",
+                url: "/goal",
+                data: {day_give: day, title_give: title, goal_num_give: goal_num, goal_set_give: goal_set},
+                success: function (response) {
+                    let check = response['check']
+                    if (check === 1) {
+                        alert("입력 완료")
+                        window.location.reload()
+                    } else if (check === 0) {
+                        alert("중복된 값입니다. 요일과 운동명을 확인하세요")
+                    }
+                }
+            });
+        }
+
+
+        function delete_goal(num) {
+
+            $.ajax({
+                type: "POST",
+                url: "/goal/delete",
+                data: {num_give: num},
+                success: function (response) {
+                    alert(response["msg"])
+                    window.location.reload()
+                }
+            });
+        }
+
+    </script>
 
 
 </head>
@@ -71,7 +156,7 @@ crossorigin="anonymous"></script>
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
 
-        <a href=""
+        <a href="http://localhost:5000/"
            class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
 
             홈으로
@@ -79,10 +164,10 @@ crossorigin="anonymous"></script>
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 link-dark">운동 목표 설정</a></li>
-            <li><a href="/templates/action.html" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">성적표</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">구씨네</a></li>
+            <li><a href="http://localhost:5000/main" class="nav-link px-2 link-dark">운동 목표 설정</a></li>
+            <li><a href="http://localhost:5000/action" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
+            <li><a href="http://localhost:5000/result" class="nav-link px-2 link-dark">성적표</a></li>
+            <li><a href="http://localhost:5000/video" class="nav-link px-2 link-dark">구씨네</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -96,23 +181,41 @@ crossorigin="anonymous"></script>
 <h1>운동목표 정하기</h1>
 
 <div class="input">
-    <div class="col-md-5">
-        <label for="inputKind" class="form-label">운동종류 선택</label>
-        <input type="text" class="form-control" id="inputKind">
+    <div class="col-md-2">
+        <label for="day" class="form-label">요일 선택</label>
+        <select id="day" class="form-control">
+            <option value="월요일">월요일</option>
+            <option value="화요일">화요일</option>
+            <option value="수요일">수요일</option>
+            <option value="목요일">목요일</option>
+            <option value="금요일">금요일</option>
+            <option value="토요일">토요일</option>
+            <option value="일요일">일요일</option>
+        </select>
+    </div>
+    <div class="col-md-2">
+        <label for="title" class="form-label">운동종류 선택</label>
+        <select id="title" class="form-control">
+            <option value="스쿼트">스쿼트</option>
+            <option value="런지">런지</option>
+            <option value="풀업">풀업</option>
+            <option value="푸쉬업">푸쉬업</option>
+            <option value="윗몸 일으키기">윗몸 일으키기</option>
+        </select>
     </div>
 
 
     <div class="col-md-1">
-        <label for="inputCount" class="form-label">횟수</label>
-        <input type="number" class="form-control" id="inputCount">
+        <label for="goal_num" class="form-label">횟수</label>
+        <input type="number" class="form-control" id="goal_num">
     </div>
     <div class="col-md-1">
-        <label for="inputSet" class="form-label">세트수</label>
-        <input type="number" class="form-control" id="inputSet">
+        <label for="goal_set" class="form-label">세트수</label>
+        <input type="number" class="form-control" id="goal_set">
 
     </div>
     <div class="col-md-1">
-    <button type="submit" class="btn btn-outline-dark">입력</button>
+        <button type="submit" class="btn btn-outline-dark" onclick="save_goal()">입력</button>
     </div>
 
 </div>
@@ -121,37 +224,15 @@ crossorigin="anonymous"></script>
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">#</th>
+        <th scope="col">요일</th>
         <th scope="col">운동 종류</th>
         <th scope="col">횟수</th>
         <th scope="col">세트수</th>
+
     </tr>
     </thead>
     <tbody id="body">
-    <tr>
-        <th scope="row">1</th>
-        <td>푸쉬업</td>
-        <td>20회</td>
-        <td>3세트</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>스쿼트</td>
-        <td>120회</td>
-        <td>20세트</td>
-    </tr>
-    <tr>
-        <th scope="row">4</th>
-        <td>풀업</td>
-        <td>50회</td>
-        <td>9세트</td>
-    </tr>
-    <tr>
-        <th scope="row">5</th>
-        <td>런지</td>
-        <td>1200회</td>
-        <td>200세트</td>
-    </tr>
+
 
     </tbody>
 </table>
