--- a/templates/resul.html
+++ b/templates/resul.html
@@ -147,8 +147,8 @@
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="http://localhost:5000/main" class="nav-link px-2 link-dark">운동 목표 설정</a></li>
-            <li><a href="http://localhost:5000/action" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
-            <li><a href="http://localhost:5000/result" class="nav-link px-2 link-dark">성적표</a></li>
+            <li><a href="http://localhost:5000/result" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
+            <li><a href="http://localhost:5000/resul" class="nav-link px-2 link-dark">성적표</a></li>
             <li><a href="http://localhost:5000/video" class="nav-link px-2 link-dark">구씨네</a></li>
         </ul>
 
