--- a/templates/video.html
+++ b/templates/video.html
@@ -81,8 +81,8 @@ crossorigin="anonymous"></script>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="http://localhost:5000/main" class="nav-link px-2 link-dark">운동 목표 설정</a></li>
-            <li><a href="http://localhost:5000/action" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
-            <li><a href="http://localhost:5000/result" class="nav-link px-2 link-dark">성적표</a></li>
+            <li><a href="http://localhost:5000/result" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
+            <li><a href="http://localhost:5000/resul" class="nav-link px-2 link-dark">성적표</a></li>
             <li><a href="http://localhost:5000/video" class="nav-link px-2 link-dark">구씨네</a></li>
         </ul>
 
@@ -110,8 +110,8 @@ crossorigin="anonymous"></script>
                 <option selected>-- 운동 선택하기 --</option>
                 <option value="squat">스쿼트</option>
                 <option value="lunge">런지</option>
-                <option value="pull">턱걸이</option>
-                <option value="push">팔굽혀 펴기</option>
+                <option value="pulls">턱걸이</option>
+                <option value="pushs">팔굽혀 펴기</option>
                 <option value="sit">윗몸 일으키기</option>
             </select>
 
