--- a/templates/cover.html
+++ b/templates/cover.html
@@ -11,74 +11,66 @@
     <style>
         * {
             font-family: 'Poor Story', cursive;
-
-
         }
+
         body {
 
-          background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url("https://rereco.co/wp-content/uploads/2022/06/%EB%82%98%EC%9D%98-%ED%95%B4%EB%B0%A9%EC%9D%BC%EC%A7%803.jpg");
-          background-position: center;
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-blend-mode: multiply;
-        }
-       .title {
-
-          width: 500px;
-          color: white;
-          margin: 100px auto 0px;
-          text-align: center;
-
-          font-size: 5rem;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://rereco.co/wp-content/uploads/2022/06/%EB%82%98%EC%9D%98-%ED%95%B4%EB%B0%A9%EC%9D%BC%EC%A7%803.jpg");
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-blend-mode: multiply;
         }
 
+        .title {
 
+            width: 500px;
+            color: white;
+            margin: 100px auto 0px;
+            text-align: center;
 
+            font-size: 5rem;
+        }
 
 
         .btnwrap {
 
 
-          width: 300px;
-          display: flex;
+            width: 300px;
+            display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
 
-          margin: 300px auto;
+            margin: 300px auto;
         }
-
 
 
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.3.min.js"
-        integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 
 
 </head>
 <body>
 
 <div class="wrap">
-  <h1 class="title">나의 운동 일지</h1>
+    <h1 class="title">나의 운동 일지</h1>
 
-<div class="btnwrap">
-  <button type="button" class="btn btn-outline-light">들어가기</button>
+    <div class="btnwrap">
+        <a href="http://localhost:5000/main"> <button type="button" class="btn btn-outline-light">들어가기</button> </a>
+    </div>
+
 </div>
-
-</div>
-
-
-
-
 
 
 </body>
