--- a/templates/cover.html
+++ b/templates/cover.html
@@ -67,7 +67,7 @@
     <h1 class="title">나의 운동 일지</h1>
 
     <div class="btnwrap">
-        <a href="http://localhost:5000/main"> <button type="button" class="btn btn-outline-light">들어가기</button> </a>
+        <a href="http://54.180.96.111/main"> <button type="button" class="btn btn-outline-light">들어가기</button> </a>
     </div>
 
 </div>
