--- a/templates/video.html
+++ b/templates/video.html
@@ -72,7 +72,7 @@ crossorigin="anonymous"></script>
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
 
-        <a href="http://localhost:5000/"
+        <a href="http://54.180.96.111/"
            class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
 
             홈으로
@@ -80,10 +80,10 @@ crossorigin="anonymous"></script>
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="http://localhost:5000/main" class="nav-link px-2 link-dark">운동 목표 설정</a></li>
-            <li><a href="http://localhost:5000/result" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
-            <li><a href="http://localhost:5000/resul" class="nav-link px-2 link-dark">성적표</a></li>
-            <li><a href="http://localhost:5000/video" class="nav-link px-2 link-dark">구씨네</a></li>
+            <li><a href="http://54.180.96.111/main" class="nav-link px-2 link-dark">운동 목표 설정</a></li>
+            <li><a href="http://54.180.96.111/result" class="nav-link px-2 link-dark">운동 결과 입력</a></li>
+            <li><a href="http://54.180.96.111/resul" class="nav-link px-2 link-dark">성적표</a></li>
+            <li><a href="http://54.180.96.111/video" class="nav-link px-2 link-dark">구씨네</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -92,6 +92,7 @@ crossorigin="anonymous"></script>
         </div>
     </header>
 </div>
+
 
 
 <div class="page4-wrap">
